--- a/convolutional_neural_networks/image_denoising.ipynb
+++ b/convolutional_neural_networks/image_denoising.ipynb
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "517f6cfd",
+   "id": "17db037f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-30T12:09:35.394401Z",
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "eb39718c",
+   "id": "7ae3b9b6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-30T12:10:13.880752Z",
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "2c3c79cf",
+   "id": "b26ff254",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-30T13:19:51.102909Z",
@@ -1338,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "310628ee",
+   "id": "6da5015b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-30T13:26:29.344312Z",
@@ -1349,32 +1349,6 @@
    "source": [
     "for path in dataset_paths:\n",
     "    dataset_images.append(plt.imread(path))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "94ff1360",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-06-30T13:27:01.121052Z",
-     "start_time": "2021-06-30T13:27:01.117466Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(358, 434, 3)"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset_images[0].shape"
    ]
   },
   {
@@ -1399,20 +1373,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 67,
    "id": "d7087ea8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T10:28:44.316205Z",
-     "start_time": "2021-06-23T10:28:44.310643Z"
+     "end_time": "2021-06-30T13:47:39.362042Z",
+     "start_time": "2021-06-30T13:47:39.357692Z"
     },
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((358, 434, 3), (627, 604, 3), (484, 307, 3))"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "dataset_images[0].shape, dataset_images[1].shape, dataset_images[2].shape"
    ]
   },
   {
@@ -1425,16 +1411,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 68,
    "id": "94f9fc55",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-23T10:28:47.187214Z",
-     "start_time": "2021-06-23T10:28:46.380958Z"
+     "end_time": "2021-06-30T13:47:44.521445Z",
+     "start_time": "2021-06-30T13:47:44.508582Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tqdm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-68-5f9a7899cb6a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdataset_images\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m3\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrepeat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_images\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdataset_images\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tqdm' is not defined"
+     ]
+    }
+   ],
    "source": [
     "dataset_images = [x if x.ndim==3 else np.repeat(x[:,:,None], 3, axis=2) for x in tqdm(dataset_images)]\n",
     "set([x.ndim for x in dataset_images])"
@@ -1656,7 +1654,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "621c5fea",
+   "id": "7626daf8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-30T12:23:21.673696Z",
@@ -1687,7 +1685,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "076fc2bc",
+   "id": "3253225d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-30T12:28:52.815737Z",
