--- a/convolutional_neural_networks/image_denoising.ipynb
+++ b/convolutional_neural_networks/image_denoising.ipynb
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8f0e1248",
+   "id": "02d9b991",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-30T12:09:35.394401Z",
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8cf6f4e1",
+   "id": "d26dc6a9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-30T12:10:13.880752Z",
@@ -1228,17 +1228,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "7d20b352",
+   "execution_count": 71,
+   "id": "83edf44d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T13:19:51.102909Z",
-     "start_time": "2021-06-30T13:19:51.100404Z"
+     "end_time": "2021-06-30T13:57:32.043495Z",
+     "start_time": "2021-06-30T13:57:32.035212Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "img_dim = 3"
+    "img_dim = plt.imread(dataset_paths[53]).ndim\n",
+    "img_dim"
    ]
   },
   {
@@ -1251,12 +1263,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "id": "a3c7d612",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T13:19:52.543492Z",
-     "start_time": "2021-06-30T13:19:52.540694Z"
+     "end_time": "2021-06-30T13:57:35.131869Z",
+     "start_time": "2021-06-30T13:57:35.129256Z"
     }
    },
    "outputs": [],
@@ -1275,12 +1287,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "id": "99c7af3b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-30T13:19:53.652107Z",
-     "start_time": "2021-06-30T13:19:53.644285Z"
+     "end_time": "2021-06-30T13:57:36.689489Z",
+     "start_time": "2021-06-30T13:57:36.685663Z"
     }
    },
    "outputs": [],
@@ -1338,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "b586156c",
+   "id": "ed675adb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-30T13:26:29.344312Z",
@@ -1654,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c44e982b",
+   "id": "857c945c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-30T12:23:21.673696Z",
@@ -1685,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "af7ecf96",
+   "id": "91bc5d21",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-06-30T12:28:52.815737Z",
